--- a/trunk/modules/catalog/views/scripts/dataGrid.phtml
+++ b/trunk/modules/catalog/views/scripts/dataGrid.phtml
@@ -8,8 +8,8 @@
 		<tr class="filters">
 			<?php foreach ($this->filters as $filters): ?>
 			<th>
-				<?php foreach ($this->filters as $filters): ?>
-				<span class="filter"><?php print $filters?></span>
+				<?php foreach ($filters as $filter): ?>
+				<span class="filter"><?php print $filter?></span>
 				<?php endforeach; ?>
 			</th>
 			<?php endforeach; ?>
