--- a/trunk/modules/user/views/scripts/user/display.phtml
+++ b/trunk/modules/user/views/scripts/user/display.phtml
@@ -19,9 +19,9 @@
 </dl>
 <?php endif; ?>
 
-<h3>Wychowawca klasy</h3>
+<h3>Twoje grupy</h3>
 <?php if (count($this->rowsetGroup) < 1): ?>
-<p class="msg-info">Nauczyciel nie jest wychowawcą</p>
+<p class="msg-info">Nie załozyłeś grup</p>
 <?php else: ?>
 <ul>
 	<?php foreach ($this->rowsetGroup as $row): ?>
