--- a/trunk/modules/catalog/views/scripts/pagination.phtml
+++ b/trunk/modules/catalog/views/scripts/pagination.phtml
@@ -2,17 +2,17 @@
 <div class="paginationControl">
 <!-- Previous page link --> 
 <?php if (isset($this->previous)): ?> 
-  <a href="<?= $this->url(array('page' => $this->previous)) . "?$this->valuesQuery"; ?>">&lt; Poprzedni</a> | 
+ <a href="<?= $this->url(array('page' => $this->previous)) . "?$this->valuesQuery"; ?>">&lt; Poprzedni</a>  
 <?php else: ?> 
-  <span class="disabled">&lt; Poprzedni</span> | 
+  <span class="disabled">&lt; Poprzedni</span> 
 <?php endif; ?> 
 
 <!-- Numbered page links -->
 <?php foreach ($this->pagesInRange as $page): ?> 
   <?php if ($page != $this->current): ?>
-    <a href="<?= $this->url(array('page' => $page)) . "?$this->valuesQuery"; ?>"><?= $page; ?></a> | 
+    <a href="<?= $this->url(array('page' => $page)) . "?$this->valuesQuery"; ?>"><?= $page; ?></a> 
   <?php else: ?>
-    <?= $page; ?> | 
+    <span class="selected"><?= $page; ?></span>
   <?php endif; ?>
 <?php endforeach; ?>
 
@@ -21,6 +21,7 @@
   <a href="<?= $this->url(array('page' => $this->next)) . "?$this->valuesQuery"; ?>">Następny &gt;</a>
 <?php else: ?> 
   <span class="disabled">Następny &gt;</span>
-<?php endif; ?> 
-</div> 
+<?php endif; ?>
+<p class="small">Znalezionych wizytówke stomatologów <b><?php print $this->totalItemCount?></b></p> 
+</div>
 <?php endif; ?>
