--- a/trunk/modules/admin/views/scripts/index/index.phtml
+++ b/trunk/modules/admin/views/scripts/index/index.phtml
@@ -23,7 +23,7 @@
 		<p>Zarządzanie stronami i blokami tekstu</p>
 	</div>
 	<div class="span-4">
-		<p><a class="action big rss" href="<?php print $this->url(array('module' => 'news', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Aktualności</a></p>
+		<p><a class="action big news" href="<?php print $this->url(array('module' => 'news', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Aktualności</a></p>
 		<p>Aktualności i komunikaty</p>
 	</div>
 	<div class="span-4">
@@ -35,7 +35,7 @@
 	
 	<h5>Zaawansowane opcje zarządzania stroną internetową</h5>
 	<div class="span-4">
-		<p><a class="action big folder" href="<?php print $this->url(array('module' => 'product', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Produkty</a></p>
+		<p><a class="action big folder-product" href="<?php print $this->url(array('module' => 'product', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Produkty</a></p>
 		<p>Tworzenie oferty produktów</p>
 	</div>
 	<div class="span-4">
@@ -47,7 +47,7 @@
 	
 	<h5>Rozszerzenia opcji zarządzania stroną internetową</h5>
 	<div class="span-4">
-		<a class="action big form" href="<?php print $this->url(array('module' => 'forms', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Formularz</a>
+		<p><a class="action big form" href="<?php print $this->url(array('module' => 'forms', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Formularz</a></p>
 		<p>Tworzenie formularzy</p>
 	</div>
 	<div class="span-4">
